--- a/index.html
+++ b/index.html
@@ -3,82 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Banco NavBank</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            overflow-x: hidden;
-        }
-        header {
-            padding: 50px;
-            text-align: center;
-            background-color: #e81764;
-        }
-        header h1, h2 {
-            color: white;
-        }
-        .login {
-            background-color: #773d94;
-            width: 100vw;
-            height: 100vh;
-        }
-        .loginDiv {
-            background-color: white;
-            text-align: center;
-            margin: 5% auto 0 auto;
-            max-width: 500px;
-            max-height: 500px;
-            padding: 50px;
-            border-radius: 10px;
-            box-shadow: 2px 2px 10px 5px #582770;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            padding: 10px;
-            align-items: center;
-            justify-content: center;
-
-        }
-        #nomeUsuario,
-        #usuarioSenha,
-        #loginButton
-        {
-            width: 400px;
-            padding: 10px;
-            margin-top: 10px;
-        }
-        #nomeUsuario,
-        #usuarioSenha {
-            border-top: none;
-            border-left: none;
-            border-right: none;
-        }
-
-        #loginButton {
-            border-radius: 5px;
-            width: 200px;
-            border: none;
-            background-color: #e81764;
-            color: white;
-            font-size: 1em;
-            margin-top: 15px;
-            cursor: pointer;
-        }
-        #loginButton:hover {
-            background-color: #c22760;
-            /*box-shadow: 2px 2px 10px 2px #e81764;*/
-            transition: .3s ease-in;
-        }
-
-    </style>
 </head>
 <body>
     <header class="cabecalho">
         <h1 id="tituloCabecalho">Bem-vindo ao NavBank!</h1>
         <h2 id="subtituloCabecalho">O seu banco digital</h2>
+        <a href="#">Crie sua conta</a>
     </header>
     <section class="login">
         <div class="loginDiv">
@@ -90,6 +25,9 @@
             <h3 id="resultado"></h3>
         </div>
     </section>
+    <script>
+        window.alert("Faça Login com um dos usuários abaixo para testar por completo!\n nome: Rodrigo senha: 1234 \n nome: Fernanda senha: 4321\n nome: João senha: 5678\n nome: Maria senha: 8765")
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
