--- a/index.html
+++ b/index.html
@@ -25,6 +25,45 @@
             <h3 id="resultado"></h3>
         </div>
     </section>
+    <section class="cartao">
+        <div class="titulo-cartao">
+            <h1>O cartão que é a sua cara!</h1>
+            <p>Sem anuidades, sem tarifas abusivas,<br> feito pensando em você!</p>
+            <button>Venha para o lado Laranja!</button>
+        </div>
+    </section>
+    <section class="servicos">
+        <h1>Explore os serviços que oferecemos</h1>
+        <div class="imagens-servicos">
+            <img src="Images/Emprestimos.jpg" alt="Emprestimos">
+            <img src="Images/Seguro.jpg" alt="Seguro-Celular">
+            <img src="Images/Seguro_Vida.jpg" alt="Seguro-Vida">
+        </div>
+        <div class="texto-servicos">
+            <div class="texto-emprestimos">
+                <h2>Empréstimos</h2>
+                <p>Faça sua simulação de empréstimo pessoal ou consignado com as melhores taxas do mercado!</p>
+                <button class="eu-quero">Eu quero!</button>
+            </div>
+            <div class="texto-seguro">
+                <h2>Seguros</h2>
+                <p>Seja para sua casa, carro ou celular, temos os melhores seguros para proteger os seus bens!</p>
+                <button class="eu-quero">Eu quero!</button>
+            </div>
+            <div class="texto-seguro-vida">
+                <h2>Seguro de Vida</h2>
+                <p>Proteja seus bens mais preciosos em momentos dificeis, contrate nosso seguro de vida!</p>
+                <button class="eu-quero">Eu quero!</button>
+            </div>
+        </div>
+    </section>
+    <section class="navblack">
+        <div class="texto-navblack">
+            <h1>Soluções para altas rendas!</h1>
+            <p>Conheça o NavBlack! Nossa solução para clientes de alta renda!</p>
+            <button>Falar com gerente</button>
+        </div>
+    </section>
     <script>
         window.alert("Faça Login com um dos usuários abaixo para testar por completo!\n nome: Rodrigo senha: 1234 \n nome: Fernanda senha: 4321\n nome: João senha: 5678\n nome: Maria senha: 8765")
     </script>
