--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
             <button>Falar com gerente</button>
         </div>
     </section>
+    <section class="abrir-conta">
+        <h1>Abra já a sua conta!</h1>
+        <div class="abrir-conta-imagens">
+            <img src="Images/Casual.jpg" alt="Conta Pessoal">
+            <img src="Images/Empresarial.jpg" alt="Conta Empresarial">
+        </div>
+        <div class="abrir-conta-textos">
+            <div class="texto-conta-pessoal">
+                <h2>Abra sua conta Pessoal!</h2>
+                <p>CPF</p><input type="text" name="cpf" id="cpf" placeholder="000.000.000-00">
+                <button>Abrir Conta</button>
+            </div>
+            <div class="texto-conta-empresarial">
+                <h2>Abra uma conta empresarial!</h2>
+                <p>CNPJ</p><input type="text" name="cnpj" id="cnpj" placeholder="000.000.000/0000-00">
+                <button>Abrir Conta</button>
+            </div>
+        </div>
+
+    </section>
     <script>
         window.alert("Faça Login com um dos usuários abaixo para testar por completo!\n nome: Rodrigo senha: 1234 \n nome: Fernanda senha: 4321\n nome: João senha: 5678\n nome: Maria senha: 8765")
     </script>
