--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="cabecalho">
         <h1 id="tituloCabecalho">Bem-vindo ao NavBank!</h1>
         <h2 id="subtituloCabecalho">O seu banco digital</h2>
-        <a href="#">Crie sua conta</a>
+        <a href="#abrir-conta">Crie sua conta</a>
     </header>
     <section class="login">
         <div class="loginDiv">
@@ -64,7 +64,7 @@
             <button>Falar com gerente</button>
         </div>
     </section>
-    <section class="abrir-conta">
+    <section class="abrir-conta" id="abrir-conta">
         <h1>Abra já a sua conta!</h1>
         <div class="abrir-conta-conteudo">
             <div class="conta-pessoal">
