--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         <div class="abrir-conta-conteudo">
             <div class="conta-pessoal">
                 <img src="Images/Casual.jpg" alt="Conta Pessoal">
-                <h2>Abra sua conta Pessoal!</h2>
+                <h2>Conta Pessoal</h2>
                 <p>CPF</p><input type="text" name="cpf" id="cpf" placeholder="000.000.000-00">
                 <button class="abrir-conta-botao">Abrir Conta</button>
             </div>
             <div class="conta-empresarial">
                 <img src="Images/Empresarial.jpg" alt="Conta empresarial">
-                <h2>Abra uma conta empresarial!</h2>
+                <h2>Conta empresarial</h2>
                 <p>CNPJ</p><input type="text" name="cnpj" id="cnpj" placeholder="00.000.000/0000-00">
                 <button class="abrir-conta-botao">Abrir Conta</button>
             </div>
