--- a/index2.html
+++ b/index2.html
@@ -94,6 +94,7 @@
                 emprestimo.style.display = "block"
             }
             function logoff() {
+                localStorage.clear()
                 sessionStorage.clear()
                 window.location.href = "index.html"
             }
