--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     </footer>
     <script>
         window.alert("Faça Login com um dos usuários abaixo para testar por completo!\n nome: Rodrigo senha: 1234 \n nome: Fernanda senha: 4321\n nome: João senha: 5678\n nome: Maria senha: 8765")
+        localStorage.setItem('saldo', 5000)
     </script>
     <script src="script.js"></script>
 </body>
