--- a/Páginas/saque.html
+++ b/Páginas/saque.html
@@ -93,7 +93,7 @@
         form.addEventListener("submit", function (e) {
             e.preventDefault();
 
-            const valorSaque = Number(document.getElementById("valorSaque").value);
+            const valorSaque = parseFloat(document.getElementById("valorSaque").value);
 
             if (valorSaque <= 0) {
                 alert("Digite um valor válido para saque.");
